--- a/jstFunctions.html
+++ b/jstFunctions.html
@@ -11,6 +11,9 @@
     <button onclick="red()">RED</button>
     <button onclick="green()">GREEN</button>
 
+    <input type="text" id="inp" />
+    <button onclick="pressed()">Click</button>
+
     <script type="text/javascript">
       function add(a, b) {
         return a + b;
@@ -33,6 +36,15 @@
         console.log("GREEN");
         document.getElementById("header").innerHTML = "GREEN";
         document.body.style.backgroundColor = "green";
+      }
+
+      function pressed() {
+        var text = document.getElementById("inp").value;
+        if (text === "red") {
+          document.getElementById("header").style.color = "red";
+        } else {
+          document.getElementById("header").style.color = "black";
+        }
       }
     </script>
   </body>
